<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ui="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dp">

            <TextView android:text="@string/warning"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/Base.TextAppearance.AppCompat.Headline" />

            <TextView android:text="@string/introduction" android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/onlyOneNumberPerContactLabel"
                android:checked="true"
                android:id="@+id/onlyOneNumberPerContactField"
                />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scanButton"
                android:text="@string/scanButtonLabel"/>

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:weightSum="1"
                    android:baselineAligned="false">
                    <TextView
                        android:text="Contacts trouvés"
                        android:gravity="left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                    <TextView
                        android:id="@+id/nbOfContactsFoundLabel"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="-"/>
                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lastStepLabel"/>
                    </TableRow>
                </TableLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uploadButton"
                android:text="@string/uploadButtonLabel"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/serverReplyLabel"/>

            </LinearLayout>
</ScrollView>
